[package]
authors = [
    "Rock Neurotiko <miguelglafuente@gmail.com>",
    "Berkus Decker <berkus+cargo@metta.systems",
]
description = "An awesome framework to build Telegram bots up to telegram-bot library."
documentation = "http://web.neurotiko.com/awesome-bot/awesome_bot"
keywords = [
    "telegram",
    "bot",
    "api",
    "library",
    "framework",
]
license = "MIT or Apache-2.0 or Beerware"
name = "awesome-bot"
readme = "README.md"
repository = "https://github.com/rockneurotiko/awesome-bot"
version = "0.2.0"

[dependencies]
failure = "0.1.1"
futures = "0.1"
regex = "1.0.*"
rustc-serialize = "0.3.*"
scoped_threadpool = "0.1.*"
telegram-bot = "0.6.1"
tokio-core = "0.1"
